--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-sqlalchemy==2.0.43
-pydantic==2.11.7
-python-multipart==0.0.20
-requests==2.32.5
+fastapi==0.111.1
+uvicorn[standard]==0.30.3
+
+sqlalchemy==2.0.32
+psycopg2-binary==2.9.9   # si usas Postgres en Render
+
+pydantic==2.7.4
+python-multipart==0.0.9
+requests==2.32.3
+
 passlib[bcrypt]==1.7.4
-python-jose==3.3.0
+bcrypt==4.1.3
+python-jose[cryptography]==3.3.0
