--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-fastapi==0.111.0
+fastapi==0.111.1
 uvicorn[standard]==0.30.3
 sqlalchemy==2.0.32
-psycopg2-binary==2.9.9   # si usas Postgres en Render
+psycopg2-binary==2.9.9     # solo si usas Postgres en Render
 pydantic==2.7.4
 python-multipart==0.0.9
 requests==2.32.3
-passlib[bcrypt]==1.7.4
+
+# Seguridad y auth (sin compilar)
+passlib==1.7.4
+bcrypt==4.1.3
 python-jose[cryptography]==3.3.0
-email-validator==2.2.0
