--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 fastapi==0.111.1
 uvicorn[standard]==0.30.3
 sqlalchemy==2.0.32
-psycopg2-binary==2.9.9     # solo si usas Postgres en Render
 pydantic==2.7.4
 python-multipart==0.0.9
 requests==2.32.3
 
-# Seguridad y auth (sin compilar)
-passlib==1.7.4
-bcrypt==4.1.3
-python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==3.2.0
+python-jose==3.3.0
+
+# Si usas Postgres en Render, añade esta línea (si no, quítala)
+psycopg2-binary==2.9.9
