--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,4 @@ python-multipart==0.0.20
 requests==2.32.5
 passlib[bcrypt]==1.7.4
 python-jose==3.3.0
-psycopg2-binary==2.9.9
+psycopg[binary]==3.1.19
